# dhanada

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
backend/: Makefile  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial_schema.py  0002_add_expires_at_to_users.py  0003_add_lockout_fields.py  0004_add_apps_and_user_apps.py  0005_add_kek_key_ids.py  0006_add_is_id_and_photo_paths.py  0007_add_password_reset_version.py
backend/scripts/: generate_kek.py  rehash_pans.py
backend/src/dhanada/: __init__.py  exceptions.py  main.py
backend/src/dhanada/auth/: __init__.py  api.py  config.py  constants.py  exceptions.py  rate_limit.py
backend/src/dhanada/auth/auth/: __init__.py  jwt.py  passwords.py  totp.py
backend/src/dhanada/auth/crypto/: __init__.py  envelope.py  keys.py
backend/src/dhanada/auth/db/: __init__.py  repository.py  session.py
backend/src/dhanada/auth/email/: __init__.py  sender.py
backend/src/dhanada/auth/fastapi/: __init__.py  dependencies.py  router.py  schemas.py
backend/src/dhanada/auth/models/: __init__.py  app.py  base.py  refresh_token.py  role.py  totp.py  user.py  user_app.py
backend/src/dhanada/auth/services/: __init__.py  audit_service.py  password_reset_service.py  recovery_service.py  role_service.py  token_service.py  totp_service.py  user_service.py  verification_service.py
backend/src/dhanada/crm/: __init__.py  exceptions.py  models.py  pan.py  permissions.py  services.py  storage.py
backend/src/dhanada/crm/fastapi/: router.py  schemas.py
backend/tests/: conftest.py
backend/tests/integration/auth/: conftest.py  test_admin_flow.py  test_app_membership.py  test_auth_flow.py  test_crm_flow.py  test_email_verification.py  test_password_reset.py  test_role_permission.py  test_session_management.py  test_totp_flow.py
backend/tests/unit/: test_main.py
backend/tests/unit/auth/: test_crypto.py  test_jwt.py  test_passwords.py  test_totp.py  test_user_service.py
backend/tests/unit/crm/: conftest.py  test_client_model.py  test_client_service.py  test_crm_documents.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: admin.ts  auth.ts
frontend/src/components/: AdminNav.vue  AppLayout.vue  AuthLayout.vue  TOTPInput.vue
frontend/src/composables/: useApi.ts
frontend/src/router/: index.ts
frontend/src/stores/: admin.ts  auth.ts
(+19 files in other folders)
