[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhanada"
version = "0.1.0"
description = "Dhanada - Business Application Backend"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Dhanada Team"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Framework :: FastAPI",
]
dependencies = [
    "sqlalchemy>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyotp>=2.10.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "cryptography>=49.0.0",
    "bcrypt>=5.0.0",
    "argon2-cffi>=23.1.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "faker>=25.0.0",
    "testcontainers>=4.10.0",
    "bandit>=1.7.0",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["dhanada*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "PTH", "SIM", "T20", "S"]
ignore = ["S101", "S311"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
enable_error_code = ["arg-type", "attr-defined", "union-attr"]
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --cov=dhanada --cov-fail-under=85 --cov-report=term-missing"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/dhanada"]
branch = true
parallel = true

[tool.alembic]
script_location = "migrations"